feat: implement shortcurt
