# apps/api/src/http/routes/auth/logout.ts
@@ -1,6 +1,5 @@
 import { z } from 'zod'
 
-import { verifyJWT } from '@/http/middlewares/verify-jwt'
 import { prisma } from '@/lib/prisma'
 import { FastifyTypedInstance } from '@/types/fastify'
 
@@ -8,9 +7,7 @@ export async function logout(app: FastifyTypedInstance) {
   app.get(
     '/sessions/logout',
     {
-      onRequest: [verifyJWT],
       schema: {
-        security: [{ bearerAuth: [] }],
         operationId: 'logout',
         tags: ['Auth'],
         summary: 'Logout',
