# apps/api/swagger.json
@@ -297,11 +297,6 @@
         "tags": [
           "Auth"
         ],
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ],
         "responses": {
           "200": {
             "description": "Default Response",
